--- a/index.html
+++ b/index.html
@@ -1,27 +1,19 @@
 <!doctype html>
 <html ng-app="demo">
-
 <head>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
-   	<script src="hello.js"></script>
+	<script src="hello.js"></script>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-
-
-
 <body>
-
-
-
-
 	<div ng-controller="Hello"> 
 	<center>
 	<h1>
 {{myData[0].word}} {{myData2[0].word}}
 </h1>
-	
-	
-	{{myData[1].word}} {{myData2[1].word}} {{myData[2].word}} {{myData2[2].word}} <br>
+<h4>
+    {{myData[1].word}} {{myData2[1].word}} {{myData[2].word}} {{myData2[2].word}} <br>
 	{{myData[3].word}} {{myData2[3].word}} {{myData[4].word}} {{myData2[4].word}}<br>
 	{{myData[5].word}} {{myData2[5].word}} <br>{{myData[6].word}} {{myData2[6].word}}<br>
 	{{myData[7].word}} {{myData2[7].word}} <br>{{myData[8].word}} {{myData2[8].word}}<br>
@@ -31,7 +23,7 @@
 	{{myData[15].word}} {{myData2[15].word}} <br>{{myData[16].word}} {{myData2[16].word}}<br>
 	{{myData[17].word}} {{myData2[17].word}} {{myData[18].word}} {{myData2[18].word}}<br>
 	{{myData[19].word}} {{myData2[19].word}} {{myData[20].word}} {{myData2[20].word}}<br><br>
-	
+</h4>
 		<!--li ng-repeat="x in myData">
 			{{ x.word }}
 			 
